# paperqa-web-app

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  deploy_on_ecr.sh  push_to_ecr.sh  pyproject.toml  setup.cfg  update_ecs.sh
paperqa/: __init__.py  app.py  pipeline.py  settings.py  utils.py
src/: config.yaml
terraform/: cloudwatch.tf  cognito.tf  ec2.tf  ecr.tf  ecs.tf  iam.tf  provider.tf  route53.tf  terraform.tf  vars.tf  vpc.tf
