[tool:pytest]
addopts =
    -vv
testpaths = tests

[aliases]
test=pytest

[metadata]
description-file = README.md
license_file = LICENSE

[wheel]
universal = 1

[flake8]
# Recommend matching the black line length (default 88),
# rather than using the flake8 default of 79:
max-line-length = 88
per-file-ignores =
    */__init__.py: F401
    olaf/app.py: E501,W293
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203

[isort]
profile = black

[coverage:run]
source =
    .
omit =
    tests/*
